# statmake

./: .coveragerc  .pre-commit-config.yaml  .pylintrc  .travis.yml  README.md  mypy.ini  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: ci.yml  publish.yml  test.yml
src/statmake/: __init__.py  __main__.py  classes.py  cli.py  errors.py  lib.py
statmake/: __main__.py  classes.py  cli.py  lib.py
tests/: conftest.py  test_cli.py  test_elided_fallback.py  test_make_stat.py  test_serialize.py  testutil.py
tests/data/: Test.stylespace  TestBogusFormat4.stylespace  TestBogusFormat4_2.stylespace  TestBroken.stylespace  TestBrokenAxes.stylespace  TestDuplicateValue.stylespace  TestDuplicateValueFormat4.stylespace  TestExternalStylespace.designspace  TestIncomplete.stylespace  TestInlineStylespace.designspace  TestItalIsSlnt.stylespace  TestJustWght.stylespace  TestMissingLinkedValue.stylespace  TestMultilingual.stylespace  TestMultilingualBrokenLocNameLang.stylespace  TestMultilingualNoEn.stylespace  TestNoFormat4.stylespace  Test_WghtItal.designspace  Test_WghtItal_Multilingual.designspace  Test_Wght_Italic.designspace  Test_Wght_Upright.designspace
tests/data/elided_fallback/: Default.stylespace  Font.designspace  IntegerCorrect.stylespace  IntegerInvalid.stylespace  NameRecord.stylespace
