[tool.poetry]
name = "statmake"
version = "0.6.0"
description = "Applies STAT information from a Stylespace to a variable font."
authors = ["Nikolaus Waxweiler <nikolaus.waxweiler@daltonmaag.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/daltonmaag/statmake"
include = ["py.typed"]

[tool.poetry.dependencies]
attrs = ">=21.3"
cattrs = ">=22.2"
fonttools = {version = ">=4.11", extras = ["ufo"]}
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
isort = "*"
mypy = "*"
pylint = ">=3"
pytest = "*"
ufo2ft = ">=2.7"
ufoLib2 = ">=0.4"

[tool.poetry.scripts]
statmake = "statmake.cli:main"

[tool.black]
target-version = ["py38"]

[tool.isort]
profile = "black"
known_first_party = "statmake"

[tool.mypy]
python_version = "3.8"
platform = "linux"
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "fontTools.*",
    "ufo2ft",
    "ufoLib2",
    "pytest",
    "testutil",
    "importlib_metadata",
    "exceptiongroup",
    "tomli",
]
ignore_missing_imports = true

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "all",
]
enable = [
    "E",
    "F",
    "anomalous-backslash-in-string",
    "bad-format-string",
    "bad-open-mode",
    "binary-op-exception",
    "duplicate-key",
    "global-variable-not-assigned",
    "unnecessary-semicolon",
    "unreachable",
    "unused-variable",
    "unused-import",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:pkg_resources",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
