[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

[project]
name = "statmake"
dynamic = ["version"]
description = "Applies STAT information from a Stylespace to a variable font."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Nikolaus Waxweiler", email = "nikolaus.waxweiler@daltonmaag.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["attrs >= 21.3", "cattrs >= 22.2", "fonttools[ufo] >= 4.11"]

[project.urls]
Homepage = "https://github.com/daltonmaag/statmake"

[project.scripts]
stamake = "statmake.cli:main"

[dependency-groups]
dev = [
    "mypy",
    "pytest >= 8",
    "pytest-cov >= 5",
    "ruff >= 0.9",
    "ufo2ft >= 2.7",
    "ufoLib2 >= 0.4",
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
python_version = "3.8"
platform = "linux"
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "fontTools.*",
    "ufo2ft",
    "ufoLib2",
    "pytest",
    "testutil",
    "importlib_metadata",
    "exceptiongroup",
    "tomli",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:fs",
    "ignore::DeprecationWarning:pkg_resources",
]
